# microbricks-copy

./: .gitignore  CMakeLists.txt  README.md  opentelemetry-1.1.0.patch
benchmark/: application_headsampling.sh  application_headsampling2.sh  application_latency_throughput2.sh  application_latency_throughput3.sh  application_overheads.ipynb  application_overheads.py  application_throughputs.sh  matrix_mult.cpp  measure_agent_cpu.sh  run_benchmark.py
config/: four_addresses.json  four_topology.json  grpc_chain_4_addr.json  grpc_chain_4_topo.json  matrix_benchmarks.csv  sample_otel_collector_config.yaml  single_server_addresses.json  single_server_otel_collector_config.yaml  single_server_topology.json  ten_addresses.json  ten_topology.json  two_addresses.json  two_topology.json
docker/: DockerfileHindsightCollector  DockerfileHindsightCoordinator  DockerfileOtelCollector  DockerfileTracer
docs/: jaeger.md
proto/: hindsightgrpc.proto
src/: client.cc  process.cc  server.cc
src/hindsightgrpc/: server.cc  server.h  topology.cc  topology.h  work.cc  work.h
src/tracing/: grpc_propagation.cc  grpc_propagation.h  hindsight_extensions.cc  hindsight_extensions.h  hindsight_opentelemetry.cc  hindsight_opentelemetry.h  opentelemetry.h
